# panda_control

./: .gitmodules  CMakeLists.txt  README.md  peg-in-hole.kdev4
.kdev4/: peg-in-hole.kdev4
documentation/: CMakeLists.txt
resources/: test_spline.py
resources/from_libfranka/: CMakeLists.txt
src/: CMakeLists.txt  workspace.code-workspace
src/bezier_trajectory/: CMakeLists.txt  bezier_trajectory.kdev4  main_bezier.cpp  main_peg_in_hole.cpp  main_smooth_curve.cpp
src/bezier_trajectory/.kdev4/: bezier_trajectory.kdev4
src/bezier_trajectory/panda_control_libfranka/: .dockerignore  .gitlab-ci.yml  CMakeLists.txt  Readme.md  franka_test.Dockerfile  libfranka.Dockerfile
src/bezier_trajectory/panda_control_libfranka/documentation/: Doxyfile.in
src/bezier_trajectory/panda_control_libfranka/res/: CMakeLists.txt
src/bezier_trajectory/panda_control_libfranka/src/: CMakeLists.txt  TODO  TrajectoryGeneration.md  demo_curve.cpp  gripper_control.cpp
src/bezier_trajectory/panda_control_libfranka/src/trajectory/: curve_trajectory.cpp  curve_trajectory.h  linear_trajectory.cpp  linear_trajectory.h  smooth_curve_trajectory.cpp  smooth_curve_trajectory.h  trajectory.h
src/bezier_trajectory/panda_control_libfranka/src/utility/: cartesian_pose.cpp  cartesian_pose.h  curve_smoothener.cpp  curve_smoothener.h  eigen_utility.h  kbhit.cpp  kbhit.h  libfranka_serialize.cpp  libfranka_serialize.h  libfranka_serialize.tpp  smooth_motion_profile.cpp  smooth_motion_profile.h  trajectory_iterator_cartesian.cpp  trajectory_iterator_cartesian.h  trajectory_iterator_cartesian_velocity.cpp  trajectory_iterator_cartesian_velocity.h
src/bezier_trajectory/panda_control_libfranka/test/: CMakeLists.txt  TestMain.cpp
src/bezier_trajectory/panda_control_libfranka/test/test_motion_gen/: TestIterator.cpp  TestStablePoseConversion.cpp  TestTrajectory.cpp
src/bezier_trajectory/trajectory/: bezier_trajectory.cpp  bezier_trajectory.h  peg_in_hole_trajectory.cpp  peg_in_hole_trajectory.h
src/bezier_trajectory/utility/: trajectory_plotter.cpp  trajectory_plotter.h
